2011-07-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Fix typo in comment.
	* src/usermod.c (move_home): It is always an error to use -m if
	the new home directory already exist (independently from the
	existence of the old home directory did not exist)
	* src/usermod.c (process_flags): Report usage if no options are
	provided. Update the error message.
	* src/usermod.c (process_flags): Check option compatibility and
	dependency before options are discarded when no changes are
	requested.
	* src/usermod.c (process_flags): Check for oflg is not needed to
	check if changes are needed.
	* src/usermod.c: usage() does not return. Add annotations.
	* src/usermod.c (update_gshadow): is_member was computed twice.
	* src/usermod.c (update_group, update_gshadow): Reduce complexity
	and document checks. Some checks were always true/false within
	their call context.
	* NEWS, src/usermod.c; man/usermod.8.xml: When the shadow file
	exists but there are no shadow entries, an entry has to be created
	if the password is changed and passwd requires a shadow entry, or
	if aging features are used (-e or -f). Document this and also that
	-e and -f require a shadow file.
	* man/usermod.8.xml: Document behavior of an empty EXPIRE_DATE.
	* man/usermod.8.xml: Document that the mail spool might have to be
	renamed (as for the homedir)
	* src/usermod.c (new_pwent): Document that pw_locate will not fail
	because getpwnam returned successfully.
	* src/usermod.c (process_flags): Do not display the usage in case
	of an invalid -f value (similar to -e).
	* src/usermod.c (process_flags): Indicate that the user name is
	invalid, instead of just a 'field'.

2011-07-08  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupadd.c: Fix typo in comment.
	* src/userdel.c: Fix typo from 2011-06-04. Report failure on the
	mailfile instead of user_home.
	* lib/fields.c: Fixed typo from 2010-02-15. field insteadof cp
	ought to be checked.